--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
   <header>
     <h1>Khan Web Developers</h1>
   </header>
-  <nav>
-
+  <nav class="navbar">
+    <a href="/Home/"><span>Home</span></a>
+    <a href="/Contact/">Contact</a>
+    <a href="/Team/">Team</a>
+    <a href="other">other</a>
   </nav>
 </body>
 </html>
