Added form functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Khan Web Developers</h1>
 
   </header>
-  
+
   <nav class="navbar">
     <a href="/Home/"><span>Home</span></a>
     <a href="/Contact/">Contact</a>
@@ -21,52 +21,79 @@
     <a href="other">other</a>
   </nav>
 
-<section id="aboutUs">
-  <h2>About Us</h2>
+  <section id="aboutUs">
+    <h2>About Us</h2>
 
 
-  <div class="">
-<img src="" alt="">
-  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-</div>
-</section>
-
-
-
-<section id="Team">
-  <h2>Our Developers Team</h2>
-  <div class="teamFigures">
-    <figure class ="singleFigure">
-      <img src="" alt="">
-      <figcaption> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </figcaption>
-    </figure>
-
-    <figure class="singleFigure">
-      <img src="" alt="">
-      <figcaption> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </figcaption>
-    </figure>
-
-    <figure class = "singleFigure">
-      <img src="" alt="">
-      <figcaption> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </figcaption>
-    </figure>
-
-</div>
-</section>
-
-<section id="contactUs" >
-  <h2>Contact Us</h2>
-  <img src="" alt="">
-  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-</section>
-
-<footer>
+    <div class="">
+      <img src="" alt=""> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
+      type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
+      more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    </div>
+  </section>
 
 
 
+  <section id="Team">
+    <h2>Our Developers Team</h2>
+    <div class="teamFigures">
+      <figure class="singleFigure">
+        <img src="" alt="">
+        <figcaption> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
+          desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </figcaption>
+      </figure>
 
+      <figure class="singleFigure">
+        <img src="" alt="">
+        <figcaption> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
+          desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </figcaption>
+      </figure>
 
-</footer>
+      <figure class="singleFigure">
+        <img src="" alt="">
+        <figcaption> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
+          desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </figcaption>
+      </figure>
+
+    </div>
+  </section>
+
+  <section id="contactUs">
+    <h2>Contact Us</h2>
+    <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbz1SuyyMjXqXEOd_KFaxKgRIrs00QsYF5xQhW7V7w/exec">
+      <!-- When form is submitted, prevent default,  -->
+
+      <fieldset class="pure-group">
+        <label for="name">Name: </label>
+        <input id="name" name="name" placeholder="Enter Name" />
+      </fieldset>
+
+      <fieldset class="pure-group">
+        <label for="message">Message: </label>
+        <textarea id="message" name="message" rows="10" placeholder="Enter message"></textarea>
+      </fieldset>
+
+      <fieldset class="pure-group">
+        <label for="email"><em>Your</em> Email Address:</label>
+        <input id="email" name="email" type="email" value="" required placeholder="your.name@email.com" />
+        <span id="email-invalid" style="display:none">
+          Must be a valid email address</span>
+      </fieldset>
+
+      <fieldset class="pure-group">
+        <label for="phoneNumber">Phone number: </label>
+        <input id="phoneNumber" name="phoneNumber" placeholder="enter phone number" />
+      </fieldset>
+
+      <button class="button-success pure-button button-xlarge">
+        <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
+    </form>
+
+  </section>
+  <script data-cfasync="false" type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
