Stopped the site from changing screens using iframe

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 
   <section id="contactUs">
     <h2>Contact Us</h2>
-    <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbz1SuyyMjXqXEOd_KFaxKgRIrs00QsYF5xQhW7V7w/exec">
-      <!-- When form is submitted, prevent default,  -->
+    <iframe name="votar" style="display:none;"></iframe>
+    <form id="gform" target="votar" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbz1SuyyMjXqXEOd_KFaxKgRIrs00QsYF5xQhW7V7w/exec">
+      <!-- , -->
 
       <fieldset class="pure-group">
         <label for="name">Name: </label>
