--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
   <section id="contactUs">
     <h2>Contact Us</h2>
     <iframe name="votar" style="display:none;"></iframe>
-    <form id="gform" target="votar" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbz1SuyyMjXqXEOd_KFaxKgRIrs00QsYF5xQhW7V7w/exec">
-      <!-- , -->
+    <form id="gform" method="POST" target="_top" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbz1SuyyMjXqXEOd_KFaxKgRIrs00QsYF5xQhW7V7w/exec">
+      <!--  -->
 
       <fieldset class="pure-group">
         <label for="name">Name: </label>
