newe changes with responsive issue

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <!--put in logo in -->
   <title>KhanWebDevelopers</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
@@ -25,7 +26,7 @@
     with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
   </section>
 
-  <section id="aboutUs">
+  <section id="aboutus">
     <h2>About Us</h2>
     <div class="">
       <img src="" alt=""> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
