--- a/index.html
+++ b/index.html
@@ -20,17 +20,16 @@
 
   <section id="home">
     <h2>Home page</h2>
-    <img src="" alt=""> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-    specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
-    with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
   </section>
 
   <section id="aboutUs">
     <h2>About Us</h2>
-    <div class="">
-      <img src="" alt=""> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
+    <div class="aboutus">
+      <img src="" alt="">
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
       type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
       more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    </p>
     </div>
   </section>
 
@@ -38,21 +37,21 @@
     <h2>Our Developers Team</h2>
     <div class="teamFigures">
       <figure class="singleFigure">
-        <img src="./images/bassam.jpeg" alt="bassam">
+        <img src="./images/bassam.jpg" alt="bassam">
         <figcaption> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
           It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
           desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </figcaption>
       </figure>
 
       <figure class="singleFigure">
-        <img src="./images/Denis.jpeg" alt="Denis">
+        <img src="./images/Denis.jpg" alt="Denis">
         <figcaption> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
           It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
           desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </figcaption>
       </figure>
 
       <figure class="singleFigure">
-        <img src="./images/yoosef.jpeg" alt="yoosef">
+        <img src="./images/yoosef.jpg" alt="yoosef">
         <figcaption> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
           It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
           desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </figcaption>
