Various website improvements

--- a/index.html
+++ b/index.html
@@ -20,30 +20,32 @@
   </header>
 
   <section id="aboutUs">
-    <h2>About Us</h2>
-    <p class="aboutus">
-      Hi! We are the Khan Web Developers- a savy and resourceful group of technophiles who have tha skills and experience to build your dream web app. Interested?.. I thought so, please check us out.
-    </p>
+    <div class="partialGreyBackround aboutUsBox">
+      <h2>About Us</h2>
+      <p class="aboutus">
+        Hi! We are the Khan Web Developers- a savy and resourceful group of technophiles who have tha skills and experience to build your dream web app. Interested?... I thought so, please check us out.
+      </p>
+    </div>
   </section>
 
   <section id="team">
-    <h2>Our Developers Team</h2>
+    <h2>Our Team of Developers</h2>
     <div class="teamFigures">
-      <figure class="singleFigure">
+      <figure class="singleFigure partialGreyBackround">
         <img src="./images/bassam.jpg" alt="bassam">
         <figcaption>
           Bassam is an extremely experienced team member. Master of everything automation related, he rarely has any work left to do. Bassam is cool, calm and collected.
         </figcaption>
       </figure>
 
-      <figure class="singleFigure">
+      <figure class="singleFigure partialGreyBackround">
         <img src="./images/Denis.jpg" alt="Denis">
         <figcaption>
           Denis is the newest member of the team. Some call him the Mechanical Turk. One thing is for sure, he does a mean robot. Denis is certainly not calm, cool or collected.
         </figcaption>
       </figure>
 
-      <figure class="singleFigure">
+      <figure class="singleFigure partialGreyBackround">
         <img src="./images/yoosef.jpg" alt="yoosef">
         <figcaption>
           Yoosef is one of a kind. Nobody can match is peacefull nature. He brings a chilled approach to every project. We are lucky to have him on team.
