Made all form inputs required > #12

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
       </p>
       <fieldset>
         <label for="name">Name: </label>
-        <input id="name" name="name" placeholder="Enter Name"/>
+        <input id="name" name="name" placeholder="Enter Name" required/>
       </fieldset>
 
       <fieldset>
         <label for="message">Message: </label>
-        <textarea id="message" name="message" rows="10" placeholder="Enter message"></textarea>
+        <textarea id="message" name="message" rows="10" placeholder="Enter message" required></textarea>
       </fieldset>
 
       <fieldset>
@@ -80,7 +80,7 @@
 
       <fieldset>
         <label for="phoneNumber">Phone number: </label>
-        <input id="phoneNumber" name="phoneNumber" placeholder="enter phone number" />
+        <input id="phoneNumber" name="phoneNumber" placeholder="enter phone number" required/>
       </fieldset>
 
       <button class="button-submit">
